# hello

./: README.md  app.py  pyproject.toml  setup.py  test.py
hello/: __init__.py
hello.egg-info/: PKG-INFO  SOURCES.txt
kp_hello.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/hello/: __init__.py  utils.py
src/kp_hello.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/kp_hello_lib/: __init__.py  __main__.py
